--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,6 +10,14 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #--------------------------------------------------------------------
 server.port=8081
 spring.application.name=order-service
+#--------------------------------------------------------------------
+#using for kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=microservicetransfer
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer.trusted-packages=your.package.path
 #---------------------------------------------------------------------
 #spring.datasource.url=jdbc:postgresql://localhost:5432/OrderDB
 #spring.datasource.username=postgres
