--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8082
 spring.application.name=product-service
 #--------------------------------------------------------------------
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#--------------------------------------------------------------------
+#using for kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=microservicetransfer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
