--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,14 +10,17 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 #--------------------------------------------------------------------
 server.port=8081
 spring.application.name=order-service
+port = 9092
+advertised.host.name = localhost 
 #--------------------------------------------------------------------
 #using for kafka
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=microservicetransfer
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.value-deserializer.trusted-packages=your.package.path
+spring.kafka.producer.group-id=microservicetransfer
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+##spring.kafka.consumer.value-deserializer.trusted-packages=your.package.path
 #---------------------------------------------------------------------
 #spring.datasource.url=jdbc:postgresql://localhost:5432/OrderDB
 #spring.datasource.username=postgres
